# SerialExperiment-Haskell

./: README.md  SerialExperiment.cabal
src/: Bezier.hs  Geometry.hs  Main.hs  Serial.hs
